--- a/LoanEligibility.ipynb
+++ b/LoanEligibility.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github.com/saulventura/LoanEligibility/blob/master/LoanEligibility.ipynb)\n"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/saulventura/LoanEligibility/blob/master/LoanEligibility.ipynb)\n",
+    "  \n",
+    "    "
    ]
   },
   {
