--- a/LoanEligibility.ipynb
+++ b/LoanEligibility.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/saulventura/LoanEligibility/blob/master/LoanEligibility.ipynb)\n",
     "  \n",
@@ -13,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project:-\n",
+    "# Project:\n",
     "\n",
     "Predict Loan Eligibility for Dream Housing Finance company\n",
     "Dream Housing Finance company deals in all kinds of home loans. They have presence across all urban, semi urban and rural areas. Customer first applies for home loan and after that company validates the customer eligibility for loan.\n",
